# semantic_segmentation_layer

./: CMakeLists.txt  README.md  package.xml
include/semantic_segmentation_layer/: segmentation_buffer.hpp  semantic_segmentation_layer.hpp
src/: segmentation_buffer.cpp  semantic_segmentation_layer.cpp
